# waterbot

./: Cargo.toml  justfile
