[package]
name = "axum"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

[build-dependencies]
ructe = { version = "0.17.2", features = ["sass", "mime03"] }

[dependencies]
axum = "0.7"
env_logger = "0.11.5"
log = "0.4.22"
mime = "0.3"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
